2007-06-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/config.amg config/config.cyg config/config.mgw: Removed
	PNG_FOR_GIF.

	* config/makefile.cyg config/makefile.mgw: Removed PNG_FOR_GIF and GIF.
	Write requirement for gd 2.0 and newer. Enable GIF_ANIMATION and JPEG.

2007-06-01  Ethan Merritt  <merritt@u.washington.edu>

	* INSTALL: Remove obsolete instructions for unix builds without
	./configure, old png driver.

2007-05-31  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (pause_command): On Windows, Gnuplot always bailed to
	command line after "pause mouse".
	Print the message of "pause <message>" into the gnuplot terminal
	unless for "pause -1 <message>" (message box).

2007-05-28  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_decimalsign):  Follow POSIX standard with regard to
	finding the value of LC_NUMERIC from the environment. Use the first
	match to LC_ALL, LC_NUMERIC, or LANG.
	Bug #1692541

2007-05-25  Ethan Merritt  <merritt@u.washington.edu>

	* term/latex.trm: Add an explicit size option; clarify documentation.
	set terminal {latex | emtex} {default | {courier|roman} {<fontsize>}}
		     {size <XX>{unit}, <YY>{unit}}
	This brings the latex terminal into line with other terminals in 4.2

2007-05-23  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Give font sizes explicitly in pt units.

	* term/svg.trm: Subscript/superscripts position must be done using
	relative offsets, not absolute offset. Otherwise it prematurely 
	terminates the scope of the surrounding "chunk" of text.

	* Make a concession to non-compliant svg viewers and clean up the scope
	of tspan elements.  Many current generation svg viewers do not implement
	"em" space units.  To coddle these, we back off to approximating
	1 em == (1.1 * fontsize)pt

2007-05-22  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (pause_command): On Windows, "pause -1" does not work
	if it is the 1st command in a script. Bug #1713350.
